# example--drf-links-api

./: manage.py  pyproject.toml
bobolink/: asgi.py  settings.py  urls.py  wsgi.py
restapi/: models.py  serializers.py  views.py
restapi/migrations/: 0001_initial.py
restapi/tests/: test_followers.py
users/: models.py
users/migrations/: 0002_user_followed_users.py
